--- a/index.html
+++ b/index.html
@@ -8,16 +8,16 @@
     <h1>Owls...</h1>
     <h2>Why do I like owls so much?</h2>
     <ul>
-      <li><img src="images/img1.jpg" alt="adorable"></li>
-      <li><img src="images/img2.jpg" alt="lovely"></li>
-      <li><img src="images/img3.jpg" alt="cuddly"></li>
+      <li><img src="images/1.jpg" alt="adorable"></li>
+      <li><img src="images/2.jpg" alt="lovely"></li>
+      <li><img src="images/3.jpg" alt="cuddly"></li>
     </ul>
     <ol>
       <li><b>they are adorable</b></li>
       <li><b>and lovely</b></li>
       <li><b>and cuddly</b></li>
-    <div><img src="images/img4.jpg" alt="cute owl"></div>
-    <div><img src="images/img5.jpg" alt="another cute owl"></div>
+    <div><img src="images/4.jpg" alt="cute owl"></div>
+    <div><img src="images/5.jpg" alt="another cute owl"></div>
     <a href="https://www.youtube.com/watch?v=gBjnfgnwXic">Watch this video here</a>
     </ol>
     <h4>
