--- a/Portfolio.html
+++ b/Portfolio.html
@@ -48,13 +48,13 @@
                     <img src="images/mock_to_article.jpg" alt="project 1" class="img-responsive">
                     <h3>Mockup to Article</h3>
                     <p>Recreated a website with HTML from a mockup.</p>
-                    <p><a href="https://github.com/sereneliu/mockup-to-article" target="_blank">See Code</a> | <a href="https://sereneliu.github.io/mockup-to-article/" target="_blank">See Project</a></p>
+                    <p><a href="https://github.com/liaquat85/liaquat85.github.io/tree/master/mockup-to-article" target="_blank">See Code</a> | <a href="https://liaquat85.github.io/mockup-to-article/index.html" target="_blank">See Project</a></p>
                 </article>
                 
                 <article class="col-md-4">
-                    <img src="/images/animal-trading-cards.png" alt="project 2" class="img-responsive">
-                    <h3>Animal Trading Cards</h3>
-                    <p>Recreated a webpage with HTML and CSS from a design prototype.</p>
+                    <img src="images/tribute-page.jpg" alt="project 2" class="img-responsive">
+                    <h3>Tribute Page </h3>
+                    <p>Recreated a webpage with HTML and bootstrap from a design prototype.</p>
                     <p><a href="https://github.com/sereneliu/animal-trading-cards" target="_blank">See Code</a> | <a href="https://sereneliu.github.io/animal-trading-cards/card.html" target="_blank">See Project</a></p>
                 </article>
                 
