--- a/Portfolio.html
+++ b/Portfolio.html
@@ -55,13 +55,13 @@
                     <img src="images/tribute-page.jpg" alt="project 2" class="img-responsive">
                     <h3>Tribute Page </h3>
                     <p>Recreated a webpage with HTML and bootstrap from a design prototype.</p>
-                    <p><a href="https://github.com/sereneliu/animal-trading-cards" target="_blank">See Code</a> | <a href="https://sereneliu.github.io/animal-trading-cards/card.html" target="_blank">See Project</a></p>
+                    <p><a href="https://github.com/liaquat85/liaquat85.github.io/tree/master/Tribute-Page" target="_blank">See Code</a> | <a href="https://liaquat85.github.io/Tribute-Page/index.html" target="_blank">See Project</a></p>
                 </article>
                 
                 <article class="col-md-4">
-                    <img src="/images/resume.png" alt="project 3" class="img-responsive">
-                    <h3>Interactive Resume</h3>
-                    <p>Created an interactive resume using HTML, CSS, JavaScript and jQuery.</p>
+                    <img src="images/github_user.jpg" alt="project 3" class="img-responsive">
+                    <h3>Github User Finder</h3>
+                    <p>Created an page to find user on github.com using HTML, CSS, JavaScript,jQuery and JSON.</p>
                     <p><a href="https://github.com/sereneliu/resume" target="_blank">See Code</a> | <a href="https://sereneliu.github.io/resume/" target="_blank">See Project</a></p>
                 </article>
                 
