--- a/Portfolio.html
+++ b/Portfolio.html
@@ -66,9 +66,9 @@
                 </article>
                 
                 <article class="col-md-4">
-                    <img src="#" class="img-responsive">
-                    <h3></h3>
-                    <p></p>
+                    <img src="images/pickfavcolor.JPG" class="img-responsive">
+                    <h3>Pick Favorite Color</h3>
+                    <p>Created a webpage to select and add the favorite color using HTML, CSS, Javascript</p>
                     <p><a href="#" target="_blank">See Code</a> | <a href="#">See Project</a></p>
                 </article>
                 
