--- a/Portfolio.html
+++ b/Portfolio.html
@@ -69,7 +69,7 @@
                     <img src="images/pickfavcolor.JPG" class="img-responsive">
                     <h3>Pick Favorite Color</h3>
                     <p>Created a webpage to select and add the favorite color using HTML, CSS, Javascript</p>
-                    <p><a href="#" target="_blank">See Code</a> | <a href="#">See Project</a></p>
+                    <p><a href="https://github.com/liaquat85/liaquat85.github.io/tree/master/PickMyFavoriteColor" target="_blank">See Code</a> | <a href="https://liaquat85.github.io/PickMyFavoriteColor/index">See Project</a></p>
                 </article>
                 
                <article class="col-md-4">
