--- a/Portfolio.html
+++ b/Portfolio.html
@@ -74,9 +74,9 @@
                 
                <article class="col-md-4">
                     <img src="http://liaquat85.github.io/images/shoppinglist.JPG" class="img-responsive">
-                    <h3></h3>
-                    <p></p>
-                    <p><a href="#" target="_blank">See Code</a> | <a href="#">See Project</a></p>
+                    <h3>SHopping list</h3>
+                    <p>Created a responsvie webapge using AngularJS for creating a shopping list</p>
+                    <p><a href="https://github.com/liaquat85/liaquat85.github.io/tree/master/shoppinglist" target="_blank">See Code</a> | <a href="https://liaquat85.github.io/shoppinglist/index">See Project</a></p>
                 </article>
                 
                 <article class="col-md-4">
