--- a/index.html
+++ b/index.html
@@ -44,6 +44,13 @@
                     <h1>Featured Projects</h1>
                 </header>
             <hr>
+                  <article class="col-md-4">
+                    <img src="#" class="img-responsive">
+                    <h3>OpenCV Project</h3>
+                    <p>I learned to do some opencv projects</p>
+                    <p><a href="https://github.com/liaquat85/liaquat85.github.io/tree/master/mockup-to-article" target="_blank">See Code</a> | <a href="https://liaquat85.github.io/mockup-to-article/index.html" target="_blank">See Project</a></p>
+                </article>
+                
                 <article class="col-md-4">
                     <img src="http://liaquat85.github.io/images/mock_to_article.jpg" alt="project 1" class="img-responsive">
                     <h3>Mockup to Article</h3>
