added python project

--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
             <hr>
                   <article class="col-md-4">
                     <img src="#" class="img-responsive">
-                    <h3>OpenCV Project</h3>
-                    <p>I learned to do some opencv projects</p>
+                    <h3>Tic Tac Toe game Python </h3>
+                    <p>Started learning Python by creating a simple Tic Tac Toe game</p>
                     <p><a href="https://github.com/liaquat85/liaquat85.github.io/tree/master/mockup-to-article" target="_blank">See Code</a> | <a href="https://liaquat85.github.io/mockup-to-article/index.html" target="_blank">See Project</a></p>
                 </article>
                 
