--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
                 </header>
             <hr>
                   <article class="col-md-4">
-                    <img src="http://liaquat85.github.io/images/tikTokGame.png" class="img-responsive">
+                    <img src="http://liaquat85.github.io/images/tikTokGame.png" class="img-responsive" alt="tikTokGame">
                     <h3>Tic Tac Toe game Python </h3>
                     <p>Started learning Python by creating a simple Tic Tac Toe game</p>
-                    <p><a href="https://github.com/liaquat85/liaquat85.github.io/blob/master/pythonprojects/tikTokGame.py" target="_blank">See Code</a> | <a href="https://liaquat85.github.io/mockup-to-article/index.html" target="_blank">See Project</a></p>
+                    <p><a href="https://github.com/liaquat85/liaquat85.github.io/blob/master/pythonprojects/tikTokGame.py" target="_blank">See Code</a> | <a href="https://github.com/liaquat85/liaquat85.github.io/blob/master/pythonprojects/tikTokGame.py" target="_blank">See Project</a></p>
                 </article>
                 
                 <article class="col-md-4">
