--- a/index.html
+++ b/index.html
@@ -52,6 +52,13 @@
                 </article>
                 
                 <article class="col-md-4">
+                    <img src="http://liaquat85.github.io/images/tikTokGame.png" class="img-responsive" alt="tikTokGame">
+                    <h3>Extracting email address and phone number from document by python  </h3>
+                    <p>Started learning Python by creating a simple Tic Tac Toe game</p>
+                    <p><a href="https://github.com/liaquat85/liaquat85.github.io/blob/master/pythonprojects/tikTokGame.py" target="_blank">See Code</a> | <a href="https://github.com/liaquat85/liaquat85.github.io/blob/master/pythonprojects/tikTokGame.py" target="_blank">See Project</a></p>
+                </article>
+
+                <article class="col-md-4">
                     <img src="http://liaquat85.github.io/images/mock_to_article.jpg" alt="project 1" class="img-responsive">
                     <h3>Mockup to Article</h3>
                     <p>Recreated a website with HTML from a mockup.</p>
