--- a/index.html
+++ b/index.html
@@ -49,14 +49,14 @@
                     <img src="http://liaquat85.github.io/images/tikTokGame.png" class="img-responsive" alt="tikTokGame">
                     <h3>Tic Tac Toe game Python </h3>
                     <p>Started learning Python by creating a simple Tic Tac Toe game</p>
-                    <p><a href="https://github.com/liaquat85/liaquat85.github.io/blob/master/pythonprojects/tikTokGame.py" target="_blank">See Code</a> | <a href="https://github.com/liaquat85/liaquat85.github.io/blob/master/pythonprojects/tikTokGame.py" target="_blank">See Project</a></p>
+                    <p><a href="https://github.com/liaquat85/liaquat85.github.io/blob/master/pythonprojects/tikTokGame.py" target="_blank">See Code</a> | <a href="https://github.com/liaquat85/liaquat85.github.io/blob/master/pythonprojects" target="_blank">See Project</a></p>
                 </article>
                 
                 <article class="col-md-4">
-                    <img src="http://liaquat85.github.io/images/tikTokGame.png" class="img-responsive" alt="tikTokGame">
+                    <img src="http://liaquat85.github.io/images/phoneEmail.png" class="img-responsive" alt="phoneEmail">
                     <h3>Extracting email address and phone number </h3>
-                    <p>Using Python to extract phone number and email address from document using pyperclip</p>
-                    <p><a href="https://github.com/liaquat85/liaquat85.github.io/blob/master/pythonprojects/tikTokGame.py" target="_blank">See Code</a> | <a href="https://github.com/liaquat85/liaquat85.github.io/blob/master/pythonprojects/tikTokGame.py" target="_blank">See Project</a></p>
+                    <p>Using Python regular expression module and pyperclip module to extract phone number and email address from document</p>
+                    <p><a href="https://github.com/liaquat85/liaquat85.github.io/blob/master/pythonprojects/phoneAndEmail.py" target="_blank">See Code</a> | <a href="https://github.com/liaquat85/liaquat85.github.io/blob/master/pythonprojects" target="_blank">See Project</a></p>
                 </article>
 
                 <article class="col-md-4">
